Tue Apr  3 19:30:05 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/DAnCE_Core.mpc
        * MPC/config/ciao_deployment_stub.mpb
        
          Added "messaging.mpb" as base project for ciao_deployment_stub.
        
        * DAnCE/ExecutionManager/Execution_Manager.cpp
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp
        * DAnCE/ExecutionManager/Execution_Manager_Impl.h

          Modified to allow passing command line option to
          indicate whether to use AMI or not.
        
        * DAnCE/DomainApplicationManager/DomainApplicationManager_AMI_Impl.cpp
        * DAnCE/DomainApplicationManager/DomainApplicationManager_AMI_Impl.h
        * DAnCE/DomainApplicationManager/Reply_Handler_i.cpp
        * DAnCE/DomainApplicationManager/Reply_Handler_i.h

          Added implementation of using AMI for "startLaunch"
          operation.

        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
        * DAnCE/Interfaces/Interfaces.mpc
        * DAnCE/NodeManager/Monitor.mpc

          Modified to accomodate the above changes.
        
Tue Apr  3 18:59:38 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIAO_TAO_DAnCE.mwc:
        * CIAO_TAO.mwc:
        
          In the list of directories eplaced ACE_ROOT/ace/ACEXML with
          3 subdirectories, leaving out the tests and examples
          subdirectories, which aren't needed. These included ACEXML
          subdirectories are now the same as in TAO_ACE.mwc.
          
        * tests/CIDL/CodeGen/CodeGen.mpc:
        
          Cosmetic changes, shortened line lengths.

Tue Apr  3 15:19:01 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp

          Removed deprecated ACE exception macros.

Mon Apr  2 16:38:24 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h
        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp