@@ -1,3 +1,10 @@
+Wed Apr  4 15:55:23 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/DomainApplicationManager/Reply_Handler_i.cpp
+        * DAnCE/DomainApplicationManager/Reply_Handler_i.h
+
+          Removed unused arguments.
+        
 Tue Apr  3 19:30:05 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * DAnCE/Deployment/DAnCE_Core.mpc
